--- a/Buoi_1/index.html
+++ b/Buoi_1/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hoc HTML</title>
 </head>
 <body>
     
+    <h1>Day la the "h1"</h1>
+    <h2>Day la the "h2"</h2>
+    <h3>Day la the "h3"</h3>
+    <h4>Day la the "h4"</h4>
+    <h5>Day la the "h5"</h5>
+    <h6>Day la the "h6"</h6>
+    <span></span>
+    <!-- format-->
+    <p> Hello my friend </p><br>
+    <b>Day la the "b"</b><br>
+    <i> Day la the "i"</i><br>
+    <u>Day la the "u"</u><br>
+    <strong>Day la the "strong"</strong><br>
+    <del>Day la the </del><br>
+    <em>Day la the "em"</em>
+    <img width="168px" height="161px" src="https://scontent.fhan2-6.fna.fbcdn.net/v/t1.0-9/165790775_4714686155216593_350149473286933296_o.jpg?_nc_cat=100&ccb=1-3&_nc_sid=b9115d&_nc_ohc=pyLdni8rWhwAX9N1WAl&_nc_ht=scontent.fhan2-6.fna&oh=91b06237d4d3f950cdfe3e0979bb3c70&oe=6086A020 " alt="hien thi anh">
+    <br><a href= "https://www.24h.com.vn"> tin tuc </a><br>
+<ol>
+    <li>item 1</li>
+    <li>item 2</li>
+    <li>item 3</li>
+</ol>
+<table border="1">
+    <tr>
+        <td>1</td>
+        <td>2</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>4</td>
+    </tr>
+    <!--BTVN
+    1. Vẽ table.https://www.google.com/search?q=table+html&sxsrf=ALeKk01RT-6g6Gurdz8amCuZjQGaupOV9g:1617027790251&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjPhJ742dXvAhXEOnAKHapAC1kQ_AUoAXoECAEQAw&biw=1536&bih=666#imgrc=7OGRArW0EQ_YWM
+    2. làm xong thì up lên git và comment vào fb.
+    3. Cắt giao diện theo ảnh. "css .flex"
+
+    -->
+</table>
 </body>
 </html>
