--- a/Buoi_1/BTVN_B1_Table.htm
+++ b/Buoi_1/BTVN_B1_Table.htm
@@ -5,6 +5,7 @@
     <title> BTVN Table ThaiVu </title>
 </head>
 <body>
+    <!-- Làm bài tập về nhà với bảng sau: https://www.mediumpedia.com/html-tutorial-part-5-html-table/-->
     <table border="1">
         <tr>
             <td>Columu 1</td>
