--- a/Buoi_1/BTNC_B1.html
+++ b/Buoi_1/BTNC_B1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-    <table style="height:244px;width:356px;position:left; border="1">
+    <table style="height:244px;width:356px;position:left; border:1">
       <tr>
           <td>
               <ul>
