--- a/Buoi_2/contact.html
+++ b/Buoi_2/contact.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>coffee-junkie-project</title>
 </head>
 <body>
-    <img id="1" width="100px" height="100px" src="./image/z2413297421131_150506cf1ec6c5695ea8b2f67b7d8556.jpg">
-  <ul>
-      <li><a href="#index.html">Home</a></li>
+    <img id="banner" width="100px" height="100px" src="./image/z2413297421131_150506cf1ec6c5695ea8b2f67b7d8556.jpg">
+  <ul id="nav">
+      <li><a href="./index.html">Home</a></li>
       <li><a href="./about.html">About</a></li>
-      <li><a href="./number.html">Number</a>r</li>
-      <li><a href="./contact.html">Contact</a></li>
+      <li><a href="./number.html">Number</a></li>
+      <li><a href="#contact.html">Contact</a></li>
   </ul>
   <br>
 <img width="100px" height="100px" src="./image/VDT.png">
@@ -33,7 +34,11 @@
 <br>
 <br>
 <br>
-<p>Copyright &copy; 2019</p>
-<a href="#1">Back to top</a>
+<a href="#banner">Back to top</a>
+<br>
+<br>
+<div id="footer">
+    <p>Copyright &copy; 2019</p>
+</div>
 </body>
 </html>
