--- a/Buoi_2/home.html
+++ b/Buoi_2/home.html
@@ -7,11 +7,11 @@
     <title>coffee-junkie-project</title>
 </head>
 <body>
-  <img id="1" width="100px" height="100px" src="./image/z2413297421131_150506cf1ec6c5695ea8b2f67b7d8556.jpg">
+  <img id="banner" width="100px" height="100px" src="./image/z2413297421131_150506cf1ec6c5695ea8b2f67b7d8556.jpg">
   <ul>
       <li><a href="#index.html">Home</a></li>
       <li><a href="./about.html">About</a></li>
-      <li><a href="./number.html">Number</a>r</li>
+      <li><a href="./number.html">Number</a></li>
       <li><a href="./contact.html">Contact</a></li>
   </ul>
 <img src="./image/VDT.png">
@@ -35,8 +35,11 @@
     <br>
     <br>
     <br>
-    
+    <a href="#banner">Back to top</a>
+<br>
+<br>
+<div id="footer">
     <p>Copyright &copy; 2019</p>
-<a href="#1">Back to top</a>
+</div>
 </body>
 </html>
