--- a/Buoi_5/index.html
+++ b/Buoi_5/index.html
@@ -8,44 +8,268 @@
     <title>Figma_Land</title>
 </head>
 <body>
-    <div class="header_light3">
-        <div class="navbar">
-            <div class="menu">
-                <div id="text1"> Home</div>
-                <div id="text2">Product</div>
-                <div id="text3">Pricing</div>
-                <div id="text4">About</div>
-                <div id="text5">Contact</div>
+    <div class="cun">
+        <div class="header_light3">
+            <div class="navbar">
+                <div class="menu">
+                    <div id="text1"> Home</div>
+                    <div id="text2">Product</div>
+                    <div id="text3">Pricing</div>
+                    <div id="text4">About</div>
+                    <div id="text5">Contact</div>
+                </div>
+                <div class="logo">
+                        <img src="./image/Rectangle 4.png" alt="">
+                </div>
+                <div class="right">
+                    <div><img src="./image/ant-design_twitter-outlined.png" alt=""></div>
+                    <div><img src="./image/ant-design_facebook-filled.png" alt=""></div>
+                    <div><img src="./image/ant-design_linkedin-filled.png" alt=""></div>
+                </div>
             </div>
-            <div class="logo">
-                    <img src="./image/Rectangle 4.png" alt="">
-            </div>
-            <div class="right">
-                <div><img src="./image/ant-design_twitter-outlined.png" alt=""></div>
-                <div><img src="./image/ant-design_facebook-filled.png" alt=""></div>
-                <div><img src="./image/ant-design_linkedin-filled.png" alt=""></div>
+            <div class="content1">
+                <div class="textcontent">
+                    <div>
+                        <h1>
+                            The best product start with Figma
+                        </h1>
+                    </div>
+                    <div>
+                        <h4>
+                            Most calendars are designed for teams. Slate is designed for freelancer
+                        </h4>
+                    </div>
+                </div>
+                <div class="container">
+                    Try for Free
+                </div>
             </div>
         </div>
-        <div class="content">
-            <div class="textcontent">
-                <h1>
-                    The best product start with Figma
-                </h1>
-                <h4>
-                    Most calendars are designed for teams. Slate is designed for freelancer
-                </h4>
+        <div class="content2">
+            <div class="contenttext1">
+                <div id="texth2">
+                    <p>Features</p>
+                </div>
+                <div id="textp">
+                    <p>Most calendars are designed for teams. Slate is designed for freelancer</p>
+                </div>
             </div>
-            <div class="container">
+            <br>
+            <br>
+            <div class="contenttext2">
+                <div class="contenttext21">
+                    <img src="./image/mdi_drawing1.png" alt="">
+                    <br>
+                    <div id="contenttext211">
+                        <h3>Open Type features Variable fonts</h3>
+                    </div>
+                    <br>
+                    <div id="contenttext212">
+                        Slate helps you see how many more days you need to work to reach your financial goal.
+                    </div>
+                </div>
+                <div class="contenttext22"> 
+                    <img src="./image/mdi_draw2.png" alt="">
+                    <br>
+                    <div id="contenttext221">
+                        <h3>Design with real data</h3>
+                    </div>
+                    <br>
+                    <div id="contenttext222">
+                        Slate helps you see how many more days you need to work to reach your
+                    </div>
+                </div>
+                <div class="contenttext23">
+                    <img src="./image/mdi_brush.png" alt="">
+                    <br>
+                    <div id="contenttext231">
+                        <h3>Fastest way to take action</h3>
+                    </div>
+                    <br>
+                    <div id="contenttext232">
+                        Slate helps you see how many more days you need to work to reach your financial goal.
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="contenttext3">
+                    <img src="./image/@ video screen.png" alt="">
+            </div>
+        </div>
+        <div class="hero">
+            <div class="contenthero">
+                <div class="frame19">
+                    <div class="textcontenthero">
+                        <div id="textcontenthero1">
+                            <p>Fastest way to organize</p>
+                        </div>
+                        <div id="textcontenthero2">
+                            <p> Most calendars are designed for teams. Slate is designed for freelancer</p>
+                        </div>
+                    </div>
+                    <div class="actioncontent">
+                        <h1>Try for free </h1>
+                    </div>
+                </div>
+                <div class="frame18">
+                    <img src="./image/Frame 18.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="CTA">
+            <div class="screen">
+                <img src="./image/left-container.png" alt="">
+            </div>
+            <div class="textCTA">
+                <div>
+                    <div>
+                        <h2>At your fingertips</h2>
+                    </div>
+                    <div class="textCTAh2">
+                        <p>Lightning fast prototyping</p>
+                    </div>
+                    <div class="textCTAactioncontent">
+                        <div class="texCTAactioncontent1">
+                        <h2>Subscribe to our Newsletter</h2>
+                        </div>
+                        <div class="texCTAactioncontent2">
+                        Available exclusivery on Figmaland
+                        </div>
+                        <div class="subcribe">
+                            <div id="yourmail"> Your Email</div>
+                            <div id="subcribe"> Subscribe</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="partner">
+            <div class="textpartner">
+                <div id="textpartner1">Partner</div>
+                <div id="textpartner2">Most calendars are designed for teams. Slate is designed for freelancer</div>
+            </div>
+            <div class="items">
+                <div class="items1">
+                    <img src="./image/@ partner-style-1.png" alt="">
+                    <img src="./image/@ partner-style-2.png" alt="">
+                    <img src="./image/@ partner-style-3.png" alt="">
+                    <img src="./image/@ partner-style-4.png" alt="">
+                </div>
+                <div class="items2">
+                    <img src="./image/@ partner-style-5.png" alt="">
+                    <img src="./image/@ partner-style-1.png" alt="">
+                    <img src="./image/@ partner-style-4.png" alt="">
+                    <img src="./image/@ partner-style-2.png" alt="">
+                </div>
+            </div>
+            <div class="actionpartner">
                 Try for Free
             </div>
         </div>
-    </div>
-    <div>
-        <div>
-            <h1>Features</h1>
+        <div class="testimonials"> 
+            <div class="testimonials1">
+                Testimonials
+            </div>
+            <div class="testimonials2">
+                <div>
+                    <img src="./image/Brands.png" alt="">
+                </div>
+                <div class="testimonials21">
+                    Most calendars are designed for teams. Slate is designed for freelancer who want a simple way to plan their schedule.
+                </div>
+                <div>
+                    <img src="./image/client.png" alt="">
+                </div>
+            </div>
+            <div class="testimonials3">
+                <h6> More Testimonials</h6> 
+            </div>
         </div>
-        <div></div>
-        <div></div>
+        <div class="pricing">
+            <div class="textpricing">
+                <div class="textpricing1">
+                    Pricing
+                </div>
+                <div class="textpricing2">
+                    Most calendars are designed for teams. Slate is designed for freelancer
+                </div>
+            </div>
+            <div class="itemspricing">
+                <div class="itemspricing1">
+                    <div class="p1">
+                        <div class="p11">
+                            STANDARD
+                        </div>
+                        <div class="p12">
+                            Organize across all apps by hand
+                        </div>
+                    </div>
+                    <div class="row"> 
+                        <img src="./image/row.png" alt="">
+                    </div>
+                    <div class="list">
+                        <div class="list1"> Pricing Frature</div>
+                        <div class="list2">Pricing Frature</div>
+                        <div class="list3">Pricing Frature</div>
+                        <div class="list4">Pricing Frature</div>
+                        <div class="list5">Pricing Frature</div>
+                    </div>
+                    <div class="order">
+                        Order Now
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="contentfooter">
+                <div class="footermenu">
+                    <div class="page">
+                        <div class="hoa">Pages</div>
+                        <div> Home</div>
+                        <div>Product</div>
+                        <div>Pricing</div>
+                        <div>About</div>
+                        <div> Contact</div>
+                    </div>
+                    <div class="tomothy">
+                        <div class="hoa">Tomothy</div>
+                        <div>Eleanor Edwards</div>
+                        <div> Ted Robertson</div>
+                        <div>Annette Russell</div>
+                        <div> Jennie Mckinney</div>
+                        <div> Grolia Richards</div>
+                    </div>
+                    <div class="jane">
+                        <div class="hoa">Jane Black</div>
+                        <div>Philip Jones</div>
+                        <div> Product</div>
+                        <div> Colleen Russell</div>
+                        <div>Marvin Hawkins</div>
+                        <div> Bruce Simmmons</div>
+                    </div>
+                </div>
+                <div class="footerrow">
+                    <div class="block1"> 
+                        <div>
+                            <img src="./image/bx_bx-map.png" alt="">
+                        </div>
+                        <div class="cho">  7480 Mockingbird Hill undefined</div>
+                    </div>
+                    <div class="block2"> 
+                        <div>
+                            <img src="./image/ic_baseline-phone-android.png" alt="">
+                        </div>
+                        <div class="cho">(239)555-0108</div>
+                    </div>
+                    <div class="block3">
+                        <img src="./image/ant-design_twitter-outlined.png" alt="">
+                        <img src="./image/ant-design_facebook-filled.png" alt="">
+                        <img src="./image/ant-design_linkedin-filled.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
