--- a/Buoi_2/index.html
+++ b/Buoi_2/index.html
@@ -3,45 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>coffee-junkie-project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coffee_Jukine</title>
 </head>
 <body>
-    <div class="header">
-        <img id="banner" width="100px" height="100px" src="./image/z2413297421131_150506cf1ec6c5695ea8b2f67b7d8556.jpg">
-        <ul id="nav">
-            <li><a href="#index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./number.html">Number</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
+    <div id="header">
+        <div>
+            <ul id="nav">
+                <li><a href="#index">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./number.html">Number</a></li>
+            </ul>
+            <img src="./image/Logo.jpg" alt="
+        </div>
     </div>
- <br>
-<img width="100px" height="100px" src="./image/VDT.png">
-  <h1>Featured Productes</h1><br>
-  <h3>House Blend Coffee</h3>
-     <img src="./image/z2413297424138_a32d103b92e23ec9f69bdd44b1965e60.jpg">
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dicta, neque rem dolorem quibusdam ab?</p>
-    <a href="https://whitehat.vn/">Details</a>
-<h2>French Roast Coffee</h2>
-<img src="./image/z2413297436665_3f1c378baa33614cbf3e0e250c1bc6cb.jpg">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dicta, neque rem dolorem quibusdam ab?</p>
-         <h2>Columbian Roast Coffee</h2>
-        <img src="./image/z2413297431098_aec88eea20cdec28e0456f188100a5f8.jpg">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dicta, neque rem dolorem quibusdam ab?</p>
-    <a href="https://www.youtube.com/">Details</a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a href="#banner">Back to top</a>
-    <div id="footer">
-        <p>Copyright &copy; 2019</p>
-    </div>
+
 </body>
 </html>
