--- a/Buoi_3/index.html
+++ b/Buoi_3/index.html
@@ -8,6 +8,23 @@
     <title> T3H</title>
 </head>
 <body>
-    <p>Hihi</p>
+    
+    <ul>
+        <li>
+            <p>P1</p>
+        </li>
+        <li>
+            <p>P2</p>
+        </li>
+        <li>
+            <p>P3</p>
+        </li>
+        <li>
+            <p>P4</p>
+        </li>
+    </ul>
+    <a href="https://www.24h.com.vn/" >Go to website</a>
+    <div>
+    </div>
 </body>
 </html>
