--- a/Buoi_4/index.html
+++ b/Buoi_4/index.html
@@ -131,12 +131,14 @@
             <h2 style="text-align: center;padding-top: 20px;">Empowering innovative brands</h2>
         </div>
         <div class="b1">
-            <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/8f5e0de117d8ae48121351a4dd1b91a6784a83df-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
-            <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/2218e3ca127e39e26892918e8749408e67b9cbde-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
-            <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/6ca2791b551f3302be33cf41c2ce58dd3924dc3d-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
-            <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/5f1418963f6e1ae0a58ad3076b4072a5d9fb35dc-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
-            <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/a248c880a228b091529274da0ba81bd707cb5f0e-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
-            <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/b4fcd29a8afd5541b04a4f73eef8fa5b78babeac-58x58.svg?q=75&fit=max&auto=format" alt=""></div>
+            <div><img src="https://cdn.sanity.io/images/599r6htc/production/8f5e0de117d8ae48121351a4dd1b91a6784a83df-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
+            <div><img src="https://cdn.sanity.io/images/599r6htc/production/2218e3ca127e39e26892918e8749408e67b9cbde-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
+            <div><img src="https://cdn.sanity.io/images/599r6htc/production/6ca2791b551f3302be33cf41c2ce58dd3924dc3d-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
+            <div><img src="https://cdn.sanity.io/images/599r6htc/production/5f1418963f6e1ae0a58ad3076b4072a5d9fb35dc-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
+            <div><img src="https://cdn.sanity.io/images/599r6htc/production/a248c880a228b091529274da0ba81bd707cb5f0e-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
+            <div><img src="https://cdn.sanity.io/images/599r6htc/production/b4fcd29a8afd5541b04a4f73eef8fa5b78babeac-58x58.svg?q=75&fit=max&auto=format" alt=""></div>
+        </div>
+        <div class="b2">
             <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/636d573c1ec86f10b6732c529f71b236b4eeefc6-142x30.png?w=77&q=75&fit=max&auto=format&dpr=2" alt=""></div>
             <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/f4660f58b3a90ffd239c8b0d8d6ecb186686355b-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
             <div><img style="max-width: 50px; max-height: 50px; margin: 10px;" src="https://cdn.sanity.io/images/599r6htc/production/8defc22b15a8fba2467f4f35bfce91c7ee007b11-77x77.svg?q=75&fit=max&auto=format" alt=""></div>
